crates/integration_physics_spatial/tests/compile_fail/ai_imports_physics_bvh.rs
use integration_physics_spatial::PhysicsBvh;

fn main() {
    let _ = std::mem::size_of::<PhysicsBvh>();
}
